# rtrs-playground

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: binsize.toml  config.toml
.github/workflows/: build.yml
app/: Cargo.toml  build.rs
app/src/: board.rs  cmd.rs  led.rs  lib.rs  logs.rs  tests.rs
app/src/peripherals/: mod.rs  pulse_sensor.rs
scripts/renode/: console.sh  run.sh
targets/stm32h743/: Cargo.toml  build.rs  stm32h743.resc
targets/stm32h743/src/: exc.rs  main.rs  objects.rs
targets/stm32l051/: Cargo.toml  build.rs  memory.x  stm32l0x1.resc
targets/stm32l051/src/: main.rs  objects.rs  util.rs
targets/stm32l072/: Cargo.toml  build.rs  memory.x  stm32l072.resc  stm32l073.jdebug
targets/stm32l072/src/: exc.rs  main.rs  objects.rs  pins.rs  spi.rs  time.rs
targets/stm32l0xx/: Cargo.toml  build.rs  memory_l051.x  stm32l072.resc
targets/stm32l0xx/src/: exc.rs  main.rs  objects.rs  spi.rs  time.rs  tty.rs
