cargo-features = ["per-package-target"]

[package]
name = "stm32h743"
version = "0.1.0"
edition = "2024"
forced-target = "thumbv7em-none-eabihf"

[dependencies]
embedded-hal = "0.2.7"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
stm32h7xx-hal = { version = "0.16.0", default-features = false, features = ["rt", "stm32h743v"] }
rtrs = { path = "../../rtrs", features = ["lock_custom"] }
app = { path = "../../app" }

[dependencies.void]
version = "1.0.2"
default-features = false
