cargo-features = ["per-package-target"]

[package]
name = "stm32l072"
version = "0.1.0"
edition = "2024"
forced-target = "thumbv6m-none-eabi"

[dependencies]
embedded-hal = "0.2.7"
nb = "0.1.3"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
stm32l0xx-hal = { version = "0.10.0", default-features = false, features = ["rt", "mcu-STM32L072CBTx"]}
rtrs = { path = "../../rtrs", features = ["critical_section_custom"] }
app = { path = "../../app" }

